<resources>
    <string name="app_name">Baro</string>
    <string name="account">Account</string>
    <string name="create">Create</string>
    <string name="share">Share</string>
    <string name="followers">Followers</string>
    <string name="settings">Settings</string>
    <string name="course_name">Course Name</string>
    <string name="username">Username</string>
    <string name="share_locally">Share Locally</string>
    <string name="share_online">Share Online</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="toast_no_username_found">\"No username found. \"</string>
    <string name="please_enter_valid_username_toast">Please enter a valid username</string>
    <string name="need_camera_access_toast">Need camera access</string>
    <string name="write_storage_permission">Need write external storage access</string>
    <string name="read_storage_permission">Need read external storage access</string>
    <string name="choose_image_input">Image Input</string>
    <string name="error_saving_credentials">Error in saving credentials</string>
    <string name="learn">Learn</string>
    <string name="error_retrieving_credentials">Could not retrieve credentials</string>
    <string name="text_choose_category">Choose Category</string>
    <string name="text_choose_thumbnail">Choose Thumbnail</string>
    <string name="lenght_course_name_warning_toast">Course should have a longer name.</string>
    <string name="video_not_saved">Video was not saved correctly</string>
    <string name="choose_language">Choose Language</string>
    <string name="flag_name">Flag Name</string>
</resources>