<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateCourseSummaryFragment"

    android:layout_marginBottom="@dimen/fragment_side_margin"
    android:layout_marginLeft="@dimen/fragment_side_margin"
    android:layout_marginRight="@dimen/fragment_side_margin"
    android:layout_marginTop="@dimen/fragment_side_margin"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/edit_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/course_name"
            android:textAlignment="center"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_course_thumbnail"
            android:layout_width="@dimen/large_logo_width"
            android:layout_height="@dimen/large_logo_height"
            android:background="@color/white"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_course_name"
            app:layout_constraintVertical_bias="0.15"
            app:srcCompat="@drawable/ic_picture" />

        <ImageButton
            android:id="@+id/btn_language"
            android:layout_width="@dimen/medium_icon_width"
            android:layout_height="@dimen/medium_icon_height"
            android:backgroundTint="@color/white"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_category"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_course_thumbnail"
            app:layout_constraintVertical_bias="0.3"
            app:srcCompat="@drawable/ic_share_black_48dp" />

        <ImageButton
            android:id="@+id/btn_category"
            android:layout_width="@dimen/medium_icon_height"
            android:layout_height="@dimen/medium_icon_height"
            android:background="@color/white"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/btn_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_language"
            app:layout_constraintTop_toTopOf="@+id/btn_language"
            app:srcCompat="@drawable/ic_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_choose_category"
            app:layout_constraintEnd_toEndOf="@+id/btn_category"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_category"
            app:layout_constraintTop_toBottomOf="@+id/btn_category" />

        <TextView
            android:id="@+id/text_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            app:layout_constraintEnd_toEndOf="@+id/btn_language"
            app:layout_constraintStart_toStartOf="@+id/btn_language"
            app:layout_constraintTop_toBottomOf="@+id/btn_language" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_choose_thumbnail"
            app:layout_constraintEnd_toEndOf="@+id/btn_course_thumbnail"
            app:layout_constraintStart_toStartOf="@+id/btn_course_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/btn_course_thumbnail" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/smaller_icon_width"
            android:layout_height="@dimen/smaller_icon_width"
            app:layout_constraintBottom_toTopOf="@+id/text_create"
            app:layout_constraintEnd_toEndOf="@+id/btn_category"
            app:layout_constraintStart_toStartOf="@+id/btn_language"
            app:srcCompat="@drawable/ic_create" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>